--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ button{
   <input type="image"  style="margin-top: 20px;
   margin-right: 300px;
   width:30px ; height:30px" 
+  src="img/share.png"
+  id="whatsapp-share-button">
   <section class="img">
     <img src="https://us.123rf.com/450wm/kakigori/kakigori2208/kakigori220800018/190480663-man-making-a-proposal-to-girl-silhouette-vector-illustration-of-couple-in-love.jpg?ver=6" alt="">
   </section>
@@ -146,7 +148,7 @@ function myFunction() {
 const text = document.querySelector('#text');
 const btn = document.querySelector('#btn');
 
-const str =  '"Hero Prova ❤ From the moment I met you, I knew you were the one for me. Will you do me the honor of being my partner for life?".';
+const str =  '" Hero Prova ❤ From the moment I met you, I knew you were the one for me. Will you do me the honor of being my partner for life?".';
 let i = 0;
 
 function autoType() {
